* ext/digest: Work around a build problem with VC++ 2010, likely   due to a bug of its cl.exe. [Bug #3231]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/branches/ruby_1_9_2@28341 b2dd03c8-39d4-4d8f-98ff-823fe69b080e